<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AddEvent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#65FFFFFF">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Evenement"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginHorizontal="150dp" />
    </com.google.android.material.appbar.MaterialToolbar>


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/desription"
            android:scaleX="1.8"
            android:scaleY="1.5"
            app:srcCompat="@drawable/ajouterevent" />



        <ImageView
            android:id="@+id/select_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/select_image_desc"
            android:src="@drawable/ic_add_image"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true" />

        <ImageView
            android:id="@+id/selected_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/selected_image_desc"
            android:visibility="gone" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/event_name"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EventName"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:drawablePadding="5dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="394dp"
            android:layout_height="89dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="160dp"
                android:layout_height="65dp"
                android:layout_margin="20dp"
                android:hint="       Date "
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/baseline_edit_calendar_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/DateEvent"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:drawablePadding="5dp"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="160dp"
                android:layout_height="65dp"
                android:layout_margin="20dp"
                android:hint="       Time"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/time">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EventTime"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:drawablePadding="5dp"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/bedget"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Bedget"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:drawablePadding="5dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/cr_er" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:background="@color/white"

        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="140dp"
        app:menu="@menu/buttom_menu"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="605dp"
        >

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</LinearLayout>