<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Ajouter_Acceuil">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#65FFFFFF">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Evenement"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginHorizontal="150dp" />
    </com.google.android.material.appbar.MaterialToolbar>


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/select_image_view"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contentDescription="@string/select_image_desc"
            android:focusable="true"
            android:src="@drawable/add_img" />

        <ImageView
            android:id="@+id/selected_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/selected_image_desc"
            android:visibility="gone" />



        <Spinner
            android:id="@+id/event_spinner"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:padding="8dp"
            android:layout_margin="19dp"
            android:background="@drawable/spinner_background"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/description"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:drawablePadding="5dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/publier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="publier" />
    </LinearLayout>

</LinearLayout>